<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/c2"
            android:layout_marginBottom="-50dp"
            android:layout_marginStart="-220dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtSignIn"
            style="@style/textBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="73dp"
            android:text="@string/sign_in"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgCircles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/circles_signin"
            app:layout_constraintBottom_toBottomOf="@+id/txtSignIn"
            app:layout_constraintEnd_toEndOf="@+id/txtSignIn"
            app:layout_constraintStart_toStartOf="@+id/txtSignIn"
            app:layout_constraintTop_toTopOf="@+id/txtSignIn" />

        <TextView
            android:id="@+id/txtWelcome"
            style="@style/textBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:text="@string/welcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgCircles" />

        <TextView
            android:id="@+id/txtIntroduction"
            style="@style/textRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/if_you_don_t_have_account_credentials_you_can_take_it_nin_near_hospital_in_your_city_after_vaccination"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/txtWelcome"
            app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />

        <TextView
            android:id="@+id/txtLogin"
            style="@style/textMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="59dp"
            android:text="@string/your_login"
            app:layout_constraintStart_toStartOf="@+id/txtWelcome"
            app:layout_constraintTop_toBottomOf="@+id/txtIntroduction" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:paddingHorizontal="10dp"
            android:fontFamily="@font/optima_medium"
            android:textColor="@color/dark_blue"
            android:background="@drawable/round_light_blue"
            app:layout_constraintEnd_toEndOf="@+id/txtIntroduction"
            app:layout_constraintStart_toStartOf="@+id/txtIntroduction"
            app:layout_constraintTop_toBottomOf="@+id/txtLogin" />


        <TextView
            android:id="@+id/txtPassword"
            style="@style/textMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="73dp"
            android:text="@string/your_password"
            app:layout_constraintStart_toStartOf="@+id/txtWelcome"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:paddingHorizontal="10dp"
            android:fontFamily="@font/optima_medium"
            android:textColor="@color/dark_blue"
            android:background="@drawable/round_light_blue"
            app:layout_constraintEnd_toEndOf="@+id/edtEmail"
            app:layout_constraintStart_toStartOf="@+id/edtEmail"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:drawableEnd="@drawable/right"
            android:fontFamily="@font/optima_b"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/light_dark_blue_200"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="-160dp"
            android:src="@drawable/c1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/llAlert"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:alpha="0"
            android:background="@drawable/round_light_blue"
            android:backgroundTint="@color/dark_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edtPassword"
            app:layout_constraintStart_toStartOf="@+id/edtPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword">

            <TextView
                android:id="@+id/txtAlertMessage"
                style="@style/textMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginStart="10dp"
                android:text="@string/we_can_t_find_account_with_this_credentials" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:src="@drawable/info" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>