<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient"
    tools:context=".ui.CheckListFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-50dp"
        android:layout_marginEnd="-50dp"
        android:layout_marginBottom="-120dp"
        android:src="@drawable/down_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/left"
                app:layout_constraintBottom_toBottomOf="@+id/txtTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtTitle" />

            <TextView
                android:id="@+id/txtTitle"
                style="@style/textBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:text="@string/checklist"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtActualDate"
                style="@style/textMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle"
                tools:text="Aug 2, 2021" />

            <TextView
                android:id="@+id/txtDescription"
                style="@style/textBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="78dp"
                android:layout_marginTop="19dp"
                android:text="@string/have_you_had_any_of_the_following_nsymptoms_in_the_last_24_hours"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtActualDate" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/txtDescription"
                app:layout_constraintStart_toStartOf="@+id/txtDescription"
                app:layout_constraintTop_toBottomOf="@id/txtDescription" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                app:layout_constraintEnd_toEndOf="@+id/txtDescription"
                app:layout_constraintStart_toStartOf="@+id/txtDescription"
                app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

            <ImageView
                android:id="@+id/imgAdd"
                android:layout_width="94dp"
                android:layout_height="94dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/add"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvData" />

            <ImageView
                android:id="@+id/imgClose"
                android:layout_width="29dp"
                android:layout_height="29dp"
                android:src="@drawable/close"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/imgAdd"
                app:layout_constraintTop_toTopOf="@+id/imgAdd" />

            <TextView
                android:id="@+id/txtAddDescription"
                style="@style/textRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="78dp"
                android:layout_marginTop="14dp"
                android:text="@string/add_your_photo_for_check_you_health_nwith_neural_networks"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgAdd" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/optima_b"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/light_dark_blue_200"
                android:textSize="18sp"
                app:backgroundTint="@color/white"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAddDescription" />

            <TextView
                android:id="@+id/txtTryAgain"
                style="@style/textRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/don_t_want_to_answer_for_now"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />


            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="30dp"
                app:layout_constraintEnd_toEndOf="@+id/txtTryAgain"
                app:layout_constraintStart_toStartOf="@+id/txtTryAgain"
                app:layout_constraintTop_toBottomOf="@+id/txtTryAgain" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>